# raytracer-mirror

./: .gitignore  CMakeLists.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CICD.yml
bs/: Makefile  bs
bs/include/: Camera.hpp  Math.hpp  Point3D.hpp  Ray.hpp  Rectangle.hpp  Sphere.hpp  Vector.hpp
bs/src/: Point3D.cpp  Ray.cpp  Vector.cpp  main.cpp
include/: Display.hpp
plugins/: CMakeLists.txt
plugins/Lights/: DirectionalLight.cpp  PointLight.cpp
plugins/Lights/Directional/: DirectionalLight.cpp  DirectionalLight.hpp
plugins/Lights/PointLight/: PointLight.cpp  PointLight.hpp
plugins/Primitives/Plane/: Plane.cpp  Plane.hpp
plugins/Primitives/Rectangle/: Rectangle.cpp  Rectangle.hpp
plugins/Primitives/Sphere/: Sphere.cpp  Sphere.hpp
shared/Math/: Point3D.hpp  Vector3D.hpp
shared/RayTracer/: Ray.hpp
shared/plugins/: APrimitive.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp
shared/plugins/Materials/: IMaterial.hpp
shared/plugins/Primitives/: IPrimitive.hpp
shared/plugins/Renderers/: IRenderer.hpp
src/: Display.cpp  main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Core/: Core.cpp  Core.hpp
src/DLLoader/: DLLoader.cpp  DLLoader.hpp
src/Display/: Display.cpp  Display.hpp
src/Math/: Ameth.hpp
src/Parser/: ParseCameras.cpp  ParseLights.cpp  ParsePrimitives.cpp  Parser.cpp  Parser.hpp
src/PluginFactory/: PluginFactory.cpp  PluginFactory.hpp
src/PluginsManager/: DLLoader.hpp  PluginManager.hpp
src/Ray/: Ray.hpp
src/Renderer/: Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp
src/Scene/: Scene.cpp  Scene.hpp
tests/: CMakeLists.txt  test_dlloader.cpp
